# 3DViewer_v2.0

./: Makefile  README.md  README_RUS.md  readme.tex
src/: CMakeLists.txt  main.cc
src/QtGifImage-master/src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/QtGifImage-master/src/gifimage/: qgifglobal.h  qgifimage_p.h
src/controller/: controller.cc  controller.h
src/model/: athens.cc  center_data.cc  counts_itoa.cc  model.h  parsing.cc  public_functions.cc  scale_data.cc  settings.cc
src/view/: glview.cc  glview.h  preferences_window.cc  preferences_window.h  preferences_window.ui  settings_mainwindow.cc  view.cc  view.h  view.ui
